# file-viewers

./: README.md  biome.json  index.html  mise.toml  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
apps/desktop-app/: components.json  package-lock.json  package.json  vite.config.ts
apps/desktop-app/docs/: README.md  components.md
apps/desktop-app/src/: App.css  App.tsx  main.tsx
apps/desktop-app/src-tauri/: tauri.conf.json
apps/landing/: .cta.json  README.md  package.json  wrangler.jsonc
apps/landing/src/: version.ts
desktop-app/: biome.json  package-lock.json  package.json  vite.config.ts
desktop-app/.claude/: CLAUDE.md  settings.local.json
desktop-app/docs/: README.md  architecture.md  components.md
desktop-app/scripts/: release.sh
desktop-app/src/: App.css  App.tsx  main.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: lib.rs  main.rs
desktop-app/src/components/: CloseTabDialog.tsx  CsvMergeDialog.tsx  CsvPreview.tsx  DragOverlay.tsx  EditorActionsBar.tsx  EditorPanel.tsx  EditorStatusBar.tsx  EmptyState.tsx  ExcelPreview.tsx  FileTabsBar.tsx  JsonPreview.tsx  MarkdownPreview.tsx  ParquetPreview.tsx  PreviewPanel.tsx  SettingsDialog.tsx  TabSidebar.tsx  Workspace.tsx
desktop-app/src/constants/: index.tsx
desktop-app/src/hooks/: useDragDrop.ts  useEditorActions.ts  useFileManager.ts  useKeyboard.ts  useNativeMenu.ts  useOpenWith.ts  useSession.ts  (+3 more)
docs/: README.md  architecture.md  color-palette.md
landing/: README.md  biome.json  package.json  vite.config.ts  wrangler.toml
landing/src/: routeTree.gen.ts  router.tsx  styles.css  version.ts
scripts/: release.sh
src/: App.css
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: CsvPreview.tsx  EditorPanel.tsx  EmptyState.tsx  PreviewPanel.tsx
(+87 files in other folders)
