[package]
name = "FileViewers"
version = "0.4.2"
description = "File Viewers"
authors = ["fuongz <hi@phuongphung.com>"]
edition = "2021"

[lib]
name = "file_viewers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-liquid-glass = "0.1.6"
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
objc2 = "0.6"

